--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #13D0A8;
-	font-family: 'Montserrat', Roboto, Times, sans-serif;
+	font-family: Roboto, Times, sans-serif;
 	min-width:500px;
 
 
