--- a/css.css
+++ b/css.css
@@ -56,9 +56,7 @@ header {
 
   opacity:0;
 
-
-  -webkit-animation: nameDrop 1200ms cubic-bezier(.1, .80, .44, .96) 800ms forwards;
-  animation: nameDrop 1200ms cubic-bezier(.1, .80, .44, .96) 800ms forwards;
+  animation: easeDown 1200ms cubic-bezier(.1, .80, .44, .96) 800ms forwards;
 
 }
 
@@ -67,6 +65,9 @@ a {
 	text-decoration: none;
 	font-weight: 300;
 	font-size:calc(12px + .5vw);
+  opacity: 0;
+
+  animation: fadeIn 1000ms ease-out 300ms forwards;
 }
 
 
@@ -86,16 +87,21 @@ footer {
 
 
 
-
-
-@-webkit-keyframes nameDrop {
+@-webkit-keyframes fadeIn {
     0% {
-        -webkit-transform: translateY(-50x);
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+
+@-webkit-keyframes easeDown {
+    0% {
         transform: translateY(-50px);
         opacity:0;
     }
     100% {
-        -webkit-transform: translateY(0px);
         transform: translateY(0px);
         opacity:1;
     }
