--- a/css.css
+++ b/css.css
@@ -2,32 +2,25 @@ body {
 	background-color: #13D0A8;
 	font-family: Roboto, Helvetica, sans-serif;
 	min-width:500px;
-
-
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-
-
 main {
 	position: absolute;
   margin: auto;
 	min-width: 300px;
-
   top: 0;
   right: 0;
   bottom: 20%;
   left: 0;
-
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -35,9 +28,7 @@ main {
 	align-items: center;
 }
 
-
 header {
-
 	position:relative;
 	background-color: #fff;
 	color: #13D0A8;
@@ -47,17 +38,12 @@ header {
 	letter-spacing:-3px;
 	font-size:calc(36px + 2vw);
 	text-align: center;
-
 	max-width: 60%;
 	min-width: 250px;
-
 	padding: 20px 40px;
 	margin-bottom:30px;
-
   opacity:0;
-
   animation: easeDown 1200ms cubic-bezier(.1, .80, .44, .96) 800ms forwards;
-
 }
 
 a {
@@ -66,10 +52,8 @@ a {
 	font-weight: 300;
 	font-size:calc(12px + .5vw);
   opacity: 0;
-
   animation: fadeIn 1000ms ease-out 300ms forwards;
 }
-
 
 nav a {
 	margin: 0 10px;
@@ -77,14 +61,11 @@ nav a {
 
 }
 
-
 footer {
 	position: absolute;
-	bottom: 5%;
-	right: 5%;
+	bottom: 30px;
+	right: 40px;
 }
-
-
 
 
 @-webkit-keyframes fadeIn {
