--- a/css.css
+++ b/css.css
@@ -68,6 +68,37 @@ footer {
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @-webkit-keyframes fadeIn {
     0% {
         opacity:0;
@@ -86,4 +117,60 @@ footer {
         transform: translateY(0px);
         opacity:1;
     }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media all and (orientation:portrait) {
+
+  header {
+  	position:relative;
+  	background-color: #fff;
+  	color: #13D0A8;
+  	font-weight: 400;
+  	text-overflow: none;
+  	white-space:nowrap;
+  	letter-spacing:-3px;
+  	font-size:calc(36px + 6vw);
+  	text-align: center;
+  	max-width: 90%;
+  	min-width: 250px;
+  	padding: 50px 10%;
+  	margin-bottom:30px;
+    opacity:0;
+    animation: easeDown 1200ms cubic-bezier(.1, .80, .44, .96) 800ms forwards;
+  }
+
+  a {
+  	color: #fff;
+  	text-decoration: none;
+  	font-weight: 300;
+  	font-size:calc(12px + 3vw);
+    opacity: 0;
+    animation: fadeIn 1000ms ease-out 300ms forwards;
+  }
+
+  nav a {
+  	margin: 0 10%;
+  	padding: 10%;
+
+  }
+
+  footer {
+  	position: absolute;
+  	bottom: 10%;
+  	right: 10%;
+  }
+
 }
