--- a/css.css
+++ b/css.css
@@ -50,7 +50,6 @@ a {
 	color: #fff;
 	text-decoration: none;
 	font-weight: 300;
-	font-size:calc(12px + .5vw);
   opacity: 0;
   animation: fadeIn 1000ms ease-out 300ms forwards;
 }
@@ -58,13 +57,14 @@ a {
 nav a {
 	margin: 0 10px;
 	padding: 10px;
-
+	font-size:calc(12px + .5vw);
 }
 
 footer {
 	position: absolute;
 	bottom: 30px;
 	right: 40px;
+	font-size:calc(12px + 3vw);
 }
 
 
@@ -157,9 +157,9 @@ footer {
   	text-overflow: none;
   	white-space:nowrap;
   	letter-spacing:-3px;
-  	font-size:calc(36px + 6vw);
+  	font-size:calc(36px + 5vw);
   	text-align: center;
-  	max-width: 90%;
+  	max-width: 80%;
   	min-width: 250px;
   	padding: 50px 10%;
   	margin-bottom:30px;
@@ -170,22 +170,24 @@ footer {
   a {
   	color: #fff;
   	text-decoration: none;
-  	font-weight: 300;
-  	font-size:calc(12px + 3vw);
+  	font-weight: 100;
     opacity: 0;
     animation: fadeIn 1000ms ease-out 300ms forwards;
   }
 
   nav a {
-  	margin: 0 5%;
-  	padding: 5%;
-
+  	font-size:calc(12px + 3vw);
   }
 
   footer {
   	position: absolute;
   	bottom: 30px;
-  	right: 10%;
+  	right: 30px;
+    font-size: 4vw;
   }
+
+
+
+
 
 }
