--- a/css.css
+++ b/css.css
@@ -55,9 +55,9 @@ a {
 }
 
 nav a {
-	margin: 0 10px;
+	/* margin: 0 10px;
 	padding: 10px;
-	font-size:calc(12px + .5vw);
+	font-size:calc(12px + .5vw); */
 }
 
 footer {
