--- a/css.css
+++ b/css.css
@@ -159,6 +159,25 @@ footer {
   }
 
 
+	@-webkit-keyframes fadeIn {
+	    0% {
+	        opacity:0;
+	    }
+	    100% {
+	        opacity:1;
+	    }
+	}
+
+	@-webkit-keyframes easeDown {
+	    0% {
+	        transform: translateY(-150px);
+	        opacity:0;
+	    }
+	    100% {
+	        transform: translateY(0px);
+	        opacity:1;
+	    }
+	}
 
 
 
